<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ToolbarPopup"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <ImageView
            android:id="@+id/iv_back_press"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_back_press" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="55dp"
            android:layout_toRightOf="@id/iv_back_press"
            android:gravity="center"
            android:text="@string/tv_setting_toolbar_title"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_20_sp" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_account_check"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/setting_toolbar"
        android:layout_marginTop="@dimen/xxlarge_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_account_check"
        app:layout_heightPercent="10%" />

    <Button
        android:id="@+id/btn_account_recharge"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent= "10%"
        android:layout_below="@id/btn_account_check"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_account_recharge" />

    <Button
        android:id="@+id/btn_setting_finger_printer"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent= "10%"
        android:layout_below="@id/btn_account_recharge"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_setting_finger_printer" />

    <Button
        android:id="@+id/btn_setting_phone_number"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent= "10%"
        android:layout_below="@id/btn_setting_finger_printer"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_setting_phone_number" />

    <Button
        android:id="@+id/btn_change_password"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent= "10%"
        android:layout_below="@id/btn_setting_phone_number"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_change_password" />

    <Button
        android:id="@+id/btn_help"
        style="@style/btn_bright_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent= "10%"
        android:layout_below="@id/btn_change_password"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_help" />

</android.support.percent.PercentRelativeLayout>