<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bright_border_radius">

    <android.support.v7.widget.Toolbar
        android:id="@+id/change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ToolbarPopup"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_back_press"
            android:gravity="center"
            android:text="@string/tv_change_password_title"
            android:textAlignment="gravity"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_20_sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_old_password"
        style="@style/text_black_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_toolbar"
        android:text="@string/tv_old_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_old_password"
        style="@style/et_bright_large"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_old_password"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:maxLength="20" />

    <TextView
        android:id="@+id/tv_new_password"
        style="@style/text_black_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_old_password"
        android:text="@string/tv_new_password" />

    <EditText
        android:id="@+id/et_new_password"
        style="@style/et_bright_large"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_new_password"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:maxLength="20" />


    <TextView
        android:id="@+id/tv_confirm_password"
        style="@style/text_black_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_new_password"
        android:text="@string/tv_confirm_password" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/et_bright_large"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_confirm_password"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/btn_change_password_ok"
        style="@style/btn_orange_border_radius"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_confirm_password"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_ok"
        app:layout_widthPercent="40%" />

    <Button
        android:id="@+id/btn_change_password_cancel"
        style="@style/btn_bright_border_radius_margin_right"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_confirm_password"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_cancel"
        app:layout_widthPercent="40%" />

</android.support.percent.PercentRelativeLayout>