<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bright_color">

    <RelativeLayout
        android:id="@+id/config_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_config_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/large_space"
            android:text="@string/tv_config_title_1"
            android:textAlignment="gravity"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_20_sp" />

        <Button
            android:id="@+id/btn_skip"
            style="@style/btn_orange_border_radius"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/primary_color_dark"
            android:paddingRight="@dimen/small_space"
            android:text="@string/btn_skip"
            android:textSize="@dimen/font_18_sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_config_phone_number"
        style="@style/text_black_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_toolbar"
        android:text="@string/et_phone_number_hint" />

    <Spinner
        android:id="@+id/sn_config_network_provider_2"
        android:layout_width="@dimen/empty_space"
        android:layout_height="50dp"
        android:layout_below="@id/tv_config_phone_number"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/et_highlight_border"
        android:entries="@array/net_provider_array"
        android:textSize="@dimen/font_medium"
        app:layout_widthPercent="30%" />

    <EditText
        android:id="@+id/et_config_phone_number"
        android:layout_width="@dimen/empty_space"
        android:layout_height="50dp"
        android:layout_below="@id/tv_config_phone_number"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:layout_toRightOf="@id/sn_config_network_provider_2"
        android:background="@drawable/et_highlight_border"
        android:hint="@string/et_phone_number_hint"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="@dimen/large_space"
        android:paddingRight="@dimen/large_space"
        android:textSize="@dimen/font_medium"
        app:layout_widthPercent="71%" />

    <TextView
        android:id="@+id/tv_config_device_number"
        style="@style/text_black_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_config_phone_number"
        android:text="@string/et_device_number_hint" />

    <Spinner
        android:id="@+id/sn_config_network_provider_1"
        android:layout_width="@dimen/empty_space"
        android:layout_height="50dp"
        android:layout_below="@id/tv_config_device_number"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/et_highlight_border"
        android:entries="@array/net_provider_array"
        android:textSize="@dimen/font_medium"
        app:layout_widthPercent="30%" />

    <EditText
        android:id="@+id/et_config_device_number"
        android:layout_width="@dimen/empty_space"
        android:layout_height="50dp"
        android:layout_below="@id/tv_config_device_number"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:layout_toRightOf="@id/sn_config_network_provider_1"
        android:background="@drawable/et_highlight_border"
        android:hint="@string/et_device_number_hint"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="@dimen/large_space"
        android:paddingRight="@dimen/large_space"
        android:textSize="@dimen/font_medium"
        app:layout_widthPercent="71%" />

    <TextView
        android:id="@+id/tv_config_password"
        style="@style/text_black_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_config_device_number"
        android:text="@string/tv_config_password_password" />

    <EditText
        android:id="@+id/et_config_password"
        style="@style/et_bright_18"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_config_password"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tv_config_password_confirm"
        style="@style/text_black_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_config_password"
        android:text="@string/tv_config_password_confirm" />

    <EditText
        android:id="@+id/et_config_password_confirm"
        style="@style/et_bright_18"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_config_password_confirm"
        android:layout_marginTop="12dp"
        android:hint="@string/tv_config_password_confirm"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_config_cancel"
        style="@style/btn_bright_border_radius_margin_left"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_config_password_confirm"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_config_cancel"
        app:layout_widthPercent="40%" />

    <Button
        android:id="@+id/btn_config_done"
        style="@style/btn_orange_border_radius_margin_right"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_config_password_confirm"
        android:layout_marginBottom="@dimen/large_space"
        android:background="@drawable/btn_disable_border_radius"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_config_next"
        app:layout_widthPercent="40%" />
</android.support.percent.PercentRelativeLayout>