<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bright_border_radius">

    <android.support.v7.widget.Toolbar
        android:id="@+id/confirm_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ToolbarPopup"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_back_press"
            android:gravity="center"
            android:text="@string/tv_confirm_title"
            android:textAlignment="gravity"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_20_sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_info"
        android:layout_below="@id/confirm_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/large_space"
        android:text="@string/tv_confirm_info"
        android:paddingRight="@dimen/large_space"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18_sp" />

    <Button
        android:id="@+id/btn_confirm_ok"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_info"
        android:layout_marginBottom="@dimen/large_space"
        style="@style/btn_orange_border_radius"
        android:elevation="@dimen/elevation"
        app:layout_widthPercent = "40%"
        android:text="@string/btn_finger_printer_ok"
        android:textSize="@dimen/font_20_sp" />

    <Button
        android:id="@+id/btn_confirm_cancel"
        android:layout_width="0dp"
        app:layout_widthPercent = "40%"
        android:layout_height="50dp"
        android:layout_below="@id/tv_info"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_cancel"
        style="@style/btn_bright_border_radius_margin_right"
        android:textSize="@dimen/font_20_sp" />

</android.support.percent.PercentRelativeLayout>