<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bright_border_radius">

    <android.support.v7.widget.Toolbar
        android:id="@+id/password_input_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ToolbarPopup"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_password_input"
            android:textAlignment="gravity"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_20_sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input_toolbar"
        android:layout_marginTop="@dimen/large_space"
        android:paddingLeft="@dimen/large_space"
        android:paddingRight="@dimen/large_space"
        android:text="@string/tv_password_input_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large" />

    <EditText
        android:id="@+id/et_password"
        style="@style/et_bright_18"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_password_hint"
        android:hint="@string/tv_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="@dimen/font_large" />

    <Button
        android:id="@+id/btn_pwd_ok"
        style="@style/btn_orange_border_radius"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_password"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_finger_printer_ok"
        app:layout_widthPercent="40%" />

    <Button
        android:id="@+id/btn_pwd_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_password"
        android:layout_marginBottom="@dimen/large_space"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_cancel"
        style="@style/btn_bright_border_radius_margin_right"
        app:layout_widthPercent="40%"/>

</android.support.percent.PercentRelativeLayout>