<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bright_border_radius">

    <android.support.v7.widget.Toolbar
        android:id="@+id/recharge_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_color"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ToolbarPopup"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:id="@+id/tv_title"
            style="@style/text_black_large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_back_press"
            android:gravity="center"
            android:text="@string/tv_recharge_title"
            android:textAlignment="gravity"
            android:textColor="@color/bright_color"
            android:textSize="@dimen/font_22_sp" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/tv_num_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recharge_toolbar"
        android:layout_marginTop="@dimen/large_space"
        android:paddingLeft="@dimen/large_space"
        android:paddingRight="@dimen/large_space"
        android:text="@string/tv_num_card"
        android:textColor="@color/black"
        android:textSize="@dimen/font_20_sp" />

    <EditText
        android:id="@+id/et_num_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_num_card"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/et_highlight_border"
        android:hint="@string/tv_num_card"
        android:inputType="number"
        android:maxLength="20"
        android:paddingLeft="@dimen/large_space"
        android:textSize="@dimen/font_18_sp" />

    <Button
        android:id="@+id/btn_recharge_ok"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_num_card"
        android:layout_marginBottom="@dimen/large_space"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/button_orange_border"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_ok"
        android:textAllCaps="false"
        android:textColor="@color/bright_color"
        android:textSize="@dimen/font_20_sp" />

    <Button
        android:id="@+id/btn_recharge_cancel"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_num_card"
        android:layout_marginBottom="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/btn_bright_border_radius"
        android:elevation="@dimen/elevation"
        android:text="@string/btn_recharge_cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/font_20_sp" />

</RelativeLayout>